--- a/games/xracer/Makefile
+++ b/games/xracer/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.64 2019/08/11 13:21:04 wiz Exp $
+# $NetBSD: Makefile,v 1.65 2019/08/30 17:56:33 nia Exp $
 #
 
 DISTNAME=		xracer-0.96.9
@@ -34,7 +34,9 @@ post-configure: do-makemaker-configure
 DEPENDS+=		netpbm-[0-9]*:../../graphics/netpbm
 
 .include "../../devel/gettext-lib/buildlink3.mk"
-.include "../../graphics/Mesa/buildlink3.mk"
+.include "../../graphics/MesaLib/buildlink3.mk"
+.include "../../graphics/freeglut/buildlink3.mk"
+.include "../../graphics/glu/buildlink3.mk"
 .include "../../mk/jpeg.buildlink3.mk"
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
