--- a/multimedia/xine-lib/Makefile
+++ b/multimedia/xine-lib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.155 2019/08/11 13:22:05 wiz Exp $
+# $NetBSD: Makefile,v 1.156 2019/08/30 18:00:15 nia Exp $
 
 PKGREVISION= 4
 .include "Makefile.common"
@@ -69,7 +69,6 @@ LDFLAGS.SunOS+=		-lresolv
 # these could be options or (better) extra plugin packages
 #.include "../../devel/SDL/buildlink3.mk"
 #.include "../../graphics/ImageMagick/buildlink3.mk"
-#.include "../../graphics/Mesa/buildlink3.mk"
 CONFIGURE_ARGS+=	--disable-opengl
 #.include "../../graphics/aalib/buildlink3.mk"
 .include "../../graphics/mng/buildlink3.mk"
