--- a/graphics/blender/Makefile
+++ b/graphics/blender/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.149 2019/08/22 12:23:16 ryoon Exp $
+# $NetBSD: Makefile,v 1.150 2019/08/30 18:44:47 nia Exp $
 
 DISTNAME=	blender-2.79b
 PKGREVISION=	7
@@ -85,8 +85,9 @@ post-install:
 .include "../../devel/gettext-tools/buildlink3.mk"
 .include "../../devel/libexecinfo/buildlink3.mk"
 .include "../../devel/pcre/buildlink3.mk"
-.include "../../graphics/Mesa/buildlink3.mk"
+.include "../../graphics/MesaLib/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
+.include "../../graphics/glu/buildlink3.mk"
 #.include "../../graphics/glew/buildlink3.mk"
 .include "../../graphics/openexr/buildlink3.mk"
 .include "../../graphics/openimageio/buildlink3.mk"
