--- a/cad/kicad/Makefile
+++ b/cad/kicad/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.38 2019/08/29 15:36:39 bouyer Exp $
+# $NetBSD: Makefile,v 1.39 2019/08/30 18:53:31 nia Exp $
 #
 
 V=		5.1.4
@@ -57,9 +57,10 @@ CXXFLAGS+=	-Wno-error=non-pod-varargs
 .include "../../devel/boost-libs/buildlink3.mk"
 .include "../../devel/cmake/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
-.include "../../graphics/Mesa/buildlink3.mk"
+.include "../../graphics/MesaLib/buildlink3.mk"
 .include "../../graphics/glew/buildlink3.mk"
 .include "../../graphics/glm/buildlink3.mk"
+.include "../../graphics/glu/buildlink3.mk"
 .include "../../graphics/cairo/buildlink3.mk"
 .include "../../lang/python/extension.mk"
 .include "../../www/curl/buildlink3.mk"
