go-gox: comment out dependency that wasn't added.
Make the problem of scan failures less pressing.

--- a/devel/go-gox/Makefile
+++ b/devel/go-gox/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2019/08/29 13:43:27 he Exp $
+# $NetBSD: Makefile,v 1.2 2019/08/30 19:22:58 maya Exp $
 #
 
 NAME=			gox
@@ -17,7 +17,7 @@ LICENSE=		mpl-2.0
 GO_SRCPATH=		github.com/mitchellh/gox
 GO_DIST_BASE=		${DISTNAME}*
 
-DEPENDS+=		go-iochan-[0-9]*:../../devel/go-iochan
+#DEPENDS+=		go-iochan-[0-9]*:../../devel/go-iochan
 
 .include "../../lang/go/go-package.mk"
 .include "../../mk/bsd.pkg.mk"
