--- a/www/p5-Dancer2/Makefile
+++ b/www/p5-Dancer2/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.51 2019/08/11 13:24:36 wiz Exp $
+# $NetBSD: Makefile,v 1.52 2019/08/31 10:34:05 wen Exp $
 
-DISTNAME=	Dancer2-0.208000
+DISTNAME=	Dancer2-0.208001
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/C/CR/CROMEDOME/}
 
@@ -14,6 +13,7 @@ LICENSE=	${PERL5_LICENSE}
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Dancer2/.packlist
 
+BUILD_DEPENDS+=	p5-Exporter-Tiny>=0:../../devel/p5-Exporter-Tiny
 BUILD_DEPENDS+=	p5-ExtUtils-MakeMaker>=7.12:../../devel/p5-ExtUtils-MakeMaker
 BUILD_DEPENDS+=	p5-Test-Memory-Cycle>=0:../../devel/p5-Test-Memory-Cycle
 BUILD_DEPENDS+=	p5-Test-MockTime>=0:../../time/p5-Test-MockTime
@@ -31,6 +31,7 @@ DEPENDS+=	p5-File-Share>=0:../../devel/p5-File-Share
 DEPENDS+=	p5-Hash-Merge-Simple>=0:../../devel/p5-Hash-Merge-Simple
 DEPENDS+=	p5-HTTP-Body>=0:../../www/p5-HTTP-Body
 DEPENDS+=	p5-HTTP-Date>=0:../../www/p5-HTTP-Date
+DEPENDS+=	p5-HTTP-Headers-Fast>=0.21:../../www/p5-HTTP-Headers-Fast
 DEPENDS+=	p5-HTTP-Message>=0:../../www/p5-HTTP-Message
 DEPENDS+=	p5-JSON>=0:../../converters/p5-JSON
 DEPENDS+=	p5-JSON-MaybeXS>=0:../../converters/p5-JSON-MaybeXS
@@ -39,7 +40,7 @@ DEPENDS+=	p5-Module-Pluggable>=0:../../devel/p5-Module-Pluggable
 DEPENDS+=	p5-Moo>=2.000000:../../devel/p5-Moo
 DEPENDS+=	p5-MooX-Types-MooseLike>=0.16:../../devel/p5-MooX-Types-MooseLike
 DEPENDS+=	p5-MooX-Types-MooseLike-Numeric>=0:../../devel/p5-MooX-Types-MooseLike-Numeric
-DEPENDS+=	p5-Plack>=1.0035:../../www/p5-Plack
+DEPENDS+=	p5-Plack>=1.0040:../../www/p5-Plack
 DEPENDS+=	p5-Plack-Middleware-FixMissingBodyInRedirect>=0:../../www/p5-Plack-Middleware-FixMissingBodyInRedirect
 DEPENDS+=	p5-Plack-Middleware-RemoveRedundantBody>=0:../../www/p5-Plack-Middleware-RemoveRedundantBody
 DEPENDS+=	p5-Return-MultiLevel>=0:../../devel/p5-Return-MultiLevel
