--- a/www/p5-HTML-Clean/Makefile
+++ b/www/p5-HTML-Clean/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2019/08/11 13:24:37 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2019/08/31 11:24:54 wen Exp $
 
-DISTNAME=	HTML-Clean-0.8
+DISTNAME=	HTML-Clean-0.9
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	13
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTML/}
 
