--- a/graphics/glu/Makefile
+++ b/graphics/glu/Makefile
@@ -1,13 +1,12 @@
-# $NetBSD: Makefile,v 1.67 2019/08/22 09:57:08 nia Exp $
+# $NetBSD: Makefile,v 1.68 2019/08/31 12:43:20 nia Exp $
 
-DISTNAME=	glu-9.0.0
-PKGREVISION=	2
+DISTNAME=	glu-9.0.1
 CATEGORIES=	graphics
 MASTER_SITES=	https://mesa.freedesktop.org/archive/glu/
-EXTRACT_SUFX=	.tar.bz2
+EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://cgit.freedesktop.org/mesa/glu/
+HOMEPAGE=	https://gitlab.freedesktop.org/mesa/glu
 COMMENT=	OpenGL Utility Library
 LICENSE=	sgi-free-software-b-v2.0
 
