--- a/fonts/harfbuzz/Makefile
+++ b/fonts/harfbuzz/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.118 2019/08/20 12:09:04 wiz Exp $
+# $NetBSD: Makefile,v 1.119 2019/08/31 13:17:38 nia Exp $
 
-DISTNAME=	harfbuzz-2.6.0
+DISTNAME=	harfbuzz-2.6.1
 CATEGORIES=	fonts
-MASTER_SITES=	http://www.freedesktop.org/software/harfbuzz/release/
+MASTER_SITES=	https://www.freedesktop.org/software/harfbuzz/release/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://harfbuzz.org/
+HOMEPAGE=	https://www.freedesktop.org/wiki/Software/HarfBuzz/
 COMMENT=	OpenType text shaping engine
 LICENSE=	mit
 
