--- a/www/p5-HTTP-Daemon/Makefile
+++ b/www/p5-HTTP-Daemon/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.16 2019/08/11 13:24:44 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2019/08/31 13:32:26 wen Exp $
 
-DISTNAME=	HTTP-Daemon-6.04
+DISTNAME=	HTTP-Daemon-6.06
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTTP/}
 
