--- a/graphics/libepoxy/Makefile
+++ b/graphics/libepoxy/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.25 2019/05/27 17:04:04 nia Exp $
+# $NetBSD: Makefile,v 1.26 2019/08/31 13:50:09 nia Exp $
 
-DISTNAME=	libepoxy-1.4.3
-PKGREVISION=	2
+DISTNAME=	libepoxy-1.5.3
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_GITHUB:=anholt/}
-GITHUB_TAG=	${PKGVERSION_NOREV}
+GITHUB_RELEASE=	${PKGVERSION_NOREV}
+EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/anholt/libepoxy/
@@ -17,13 +17,19 @@ USE_LIBTOOL=		yes
 USE_TOOLS+=		pkg-config autoconf autoreconf automake
 GNU_CONFIGURE=		yes
 PKGCONFIG_OVERRIDE+=	epoxy.pc.in
-PYTHON_FOR_BUILD_ONLY=	yes
+PYTHON_FOR_BUILD_ONLY=	tool
 
-.include "options.mk"
+PLIST_VARS+=		egl
 
 pre-configure:
 	cd ${WRKSRC} && autoreconf -vif
 
+.include "../../graphics/MesaLib/buildlink3.mk"
+.if !empty(MESALIB_SUPPORTS_EGL:M[Yy][Ee][Ss])
+PLIST.egl=		yes
+.endif
+
+.include "options.mk"
 .include "../../devel/xorg-util-macros/buildlink3.mk"
 .include "../../lang/python/tool.mk"
 .include "../../mk/bsd.pkg.mk"
