--- a/www/p5-HTTP-OAI/Makefile
+++ b/www/p5-HTTP-OAI/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.18 2019/08/11 13:24:45 wiz Exp $
+# $NetBSD: Makefile,v 1.19 2019/08/31 14:18:41 wen Exp $
 
-DISTNAME=	HTTP-OAI-4.08
+DISTNAME=	HTTP-OAI-4.09
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTTP/}
 
