--- a/games/freeciv-share/Makefile
+++ b/games/freeciv-share/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.38 2019/08/22 12:23:08 ryoon Exp $
+# $NetBSD: Makefile,v 1.39 2019/08/31 14:44:58 nia Exp $
 
 PKGNAME=	${DISTNAME:S/-/-share-/}
-PKGREVISION=	11
 COMMENT=	Machine independent files for Freeciv
 
 .include "../../games/freeciv-share/Makefile.common"
