--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2904 2019/08/29 13:45:24 he Exp $
+# $NetBSD: Makefile,v 1.2905 2019/08/31 21:12:29 he Exp $
 #
 
 COMMENT=	Development utilities
@@ -401,6 +401,7 @@ SUBDIR+=	go-humanize
 SUBDIR+=	go-i18n
 SUBDIR+=	go-immutable-radix
 SUBDIR+=	go-ini
+SUBDIR+=	go-iochan
 SUBDIR+=	go-isatty
 SUBDIR+=	go-jwalterweatherman
 SUBDIR+=	go-kingpin.v3-unstable
