--- a/devel/go-gox/Makefile
+++ b/devel/go-gox/Makefile
@@ -1,13 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2019/08/30 19:22:58 maya Exp $
+# $NetBSD: Makefile,v 1.3 2019/08/31 21:16:58 he Exp $
 #
 
 NAME=			gox
-DISTNAME=		${NAME}-1.0.1
+VERSION=		1.0.1
+DISTNAME=		${NAME}-${VERSION}
 PKGNAME=		go-${DISTNAME}
 GITHUB_PROJECT=		${NAME}
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GITHUB:=mitchellh/}
-GITHUB_TAG=		v1.0.1
+GITHUB_TAG=		v${VERSION}
 
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		https://github.com/mitchellh/gox
@@ -17,7 +18,7 @@ LICENSE=		mpl-2.0
 GO_SRCPATH=		github.com/mitchellh/gox
 GO_DIST_BASE=		${DISTNAME}*
 
-#DEPENDS+=		go-iochan-[0-9]*:../../devel/go-iochan
+DEPENDS+=		go-iochan-[0-9]*:../../devel/go-iochan
 
 .include "../../lang/go/go-package.mk"
 .include "../../mk/bsd.pkg.mk"
