--- a/shells/bash/Makefile
+++ b/shells/bash/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.87 2019/08/15 00:33:44 kre Exp $
+# $NetBSD: Makefile,v 1.88 2019/09/01 05:59:21 kre Exp $
 
 BASH_VERSION=		5.0
-BASH_PATCHLEVEL=	9
+BASH_PATCHLEVEL=	11
 
 DISTNAME=	bash-${BASH_VERSION}
 PKGNAME=	bash-${BASH_VERSION:C/4\.4\..*/4.4/}.${BASH_PATCHLEVEL}
@@ -10,7 +10,8 @@ MASTER_SITES=	${MASTER_SITE_GNU:=bash/}
 
 PATCH_SITES=	${MASTER_SITES:=bash-5.0-patches/}
 PATCHFILES+=	bash50-001 bash50-002 bash50-003 bash50-004 bash50-005
-PATCHFILES+=	bash50-006 bash50-007 bash50-008 bash50-009
+PATCHFILES+=	bash50-006 bash50-007 bash50-008 bash50-009 bash50-010
+PATCHFILES+=	bash50-011
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/bash/bash.html
