--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.274 2019/08/08 06:00:19 wiz Exp $
+# $NetBSD: Makefile,v 1.275 2019/09/01 14:02:26 ryoon Exp $
 #
 
 COMMENT=	Multimedia utilities
@@ -21,6 +21,7 @@ SUBDIR+=	dragon
 SUBDIR+=	dumpmpeg
 SUBDIR+=	dvb-apps
 SUBDIR+=	dvd-slideshow
+SUBDIR+=	dvd-vr
 SUBDIR+=	dvdauthor
 SUBDIR+=	dvdbackup
 SUBDIR+=	dvdrip
