--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1401 2019/08/22 13:32:28 fcambus Exp $
+# $NetBSD: Makefile,v 1.1402 2019/09/02 07:33:23 adam Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -757,6 +757,7 @@ SUBDIR+=	py-notebook
 SUBDIR+=	py-parsel
 SUBDIR+=	py-paste
 SUBDIR+=	py-pelican
+SUBDIR+=	py-purl
 SUBDIR+=	py-pylint-django
 SUBDIR+=	py-pystache
 SUBDIR+=	py-python-digest
