--- a/devel/p5-File-Binary/Makefile
+++ b/devel/p5-File-Binary/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2019/08/11 13:19:25 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2019/09/02 11:45:35 adam Exp $
 
 DISTNAME=	File-Binary-1.7
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	8
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=File/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -18,7 +18,7 @@ PERL5_PACKLIST=	auto/File/Binary/.packlist
 USE_LANGUAGES=	# none
 
 post-install:
-		${CHMOD} -x ${DESTDIR}${PREFIX}/${PERL5_SUB_INSTALLVENDORLIB}/File/Binary.pm
+	${CHMOD} -x ${DESTDIR}${PREFIX}/${PERL5_SUB_INSTALLVENDORLIB}/File/Binary.pm
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
