--- a/textproc/p5-HTML-FormatText-WithLinks/Makefile
+++ b/textproc/p5-HTML-FormatText-WithLinks/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.10 2019/08/11 13:23:29 wiz Exp $
-#
+# $NetBSD: Makefile,v 1.11 2019/09/02 12:13:31 adam Exp $
 
 DISTNAME=	HTML-FormatText-WithLinks-0.15
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	5
-CATEGORIES=	textproc
+CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=HTML/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -12,12 +11,13 @@ HOMEPAGE=	https://metacpan.org/release/HTML-FormatText-WithLinks
 COMMENT=	HTML to text conversion with links as footnotes
 LICENSE=	${PERL5_LICENSE}
 
+DEPENDS+=	p5-URI-[0-9]*:../../www/p5-URI
+DEPENDS+=	p5-HTML-Tree-[0-9]*:../../www/p5-HTML-Tree
+DEPENDS+=	p5-HTML-Format-[0-9]*:../../www/p5-HTML-Format
+
 PERL5_MODULE_TYPE=	Module::Build
 PERL5_PACKLIST=		auto/HTML/FormatText/WithLinks/.packlist
 USE_LANGUAGES=		# none
 
-DEPENDS+=	p5-URI-[0-9]*:../../www/p5-URI
-DEPENDS+=	p5-HTML-Tree-[0-9]*:../../www/p5-HTML-Tree
-DEPENDS+=	p5-HTML-Format-[0-9]*:../../www/p5-HTML-Format
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
