--- a/databases/p5-Class-DBI-BaseDSN/Makefile
+++ b/databases/p5-Class-DBI-BaseDSN/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.11 2019/08/11 13:18:23 wiz Exp $
-#
+# $NetBSD: Makefile,v 1.12 2019/09/02 12:34:28 adam Exp $
 
 DISTNAME=	Class-DBI-BaseDSN-1.22
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	7
-CATEGORIES=	databases
+CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Class/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://metacpan.org/pod/release/RCLAMP/Class-DBI-BaseDSN-1.22/lib/Class/DBI/BaseDSN.pm
+HOMEPAGE=	https://metacpan.org/release/Class-DBI-BaseDSN
 COMMENT=	DSN sensitive base class
 LICENSE=	${PERL5_LICENSE}
 
