--- a/devel/p5-Python-Serialise-Marshal/Makefile
+++ b/devel/p5-Python-Serialise-Marshal/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.11 2019/08/11 13:20:14 wiz Exp $
-#
+# $NetBSD: Makefile,v 1.12 2019/09/02 12:36:50 adam Exp $
 
 DISTNAME=	Python-Serialise-Marshal-0.02
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	7
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Python/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	https://metacpan.org/pod/release/SIMONW/Python-Serialise-Marshal-0.02/lib/Python/Serialise/Marshal.pm
+HOMEPAGE=	https://metacpan.org/release/Python-Serialise-Marshal
 COMMENT=	Module for reading and writing marshalled Python files
 LICENSE=	${PERL5_LICENSE}
 
