--- a/devel/p5-Mojo-IOLoop-ForkCall/Makefile
+++ b/devel/p5-Mojo-IOLoop-ForkCall/Makefile
@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.13 2019/08/11 13:19:53 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2019/09/02 12:39:25 adam Exp $
 
 GITHUB_PROJECT=	Mojo-IOLoop-ForkCall
 DISTNAME=	Mojo-IOLoop-ForkCall-0.20
 PKGNAME=	p5-${DISTNAME}
 PKGREVISION=	1
-CATEGORIES=	devel
+CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_GITHUB:=jberger/}
 
 MAINTAINER=	wiedi@frubar.net
