--- a/net/libupnp/Makefile
+++ b/net/libupnp/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2015/03/15 17:09:00 hiramatsu Exp $
-#
+# $NetBSD: Makefile,v 1.24 2019/09/02 12:58:54 nia Exp $
 
-DISTNAME=		libupnp-1.6.19
+DISTNAME=		libupnp-1.8.4
 CATEGORIES=		net
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=pupnp/}
 EXTRACT_SUFX=		.tar.bz2
@@ -11,12 +10,9 @@ HOMEPAGE=		http://pupnp.sourceforge.net/
 COMMENT=		Portable Universal Plug and Play (UPnP) SDK
 LICENSE=		modified-bsd
 
-USE_LANGUAGES=		c
 USE_TOOLS+=		pkg-config
 USE_LIBTOOL=		yes
 GNU_CONFIGURE=		yes
-
-CONFIGURE_ARGS+=	--with-documentation
 
 PKGCONFIG_OVERRIDE+=	libupnp.pc.in
 
@@ -25,6 +21,5 @@ TEST_TARGET=		check
 CFLAGS.SunOS+=		-D_POSIX_PTHREAD_SEMANTICS
 
 .include "options.mk"
-
 .include "../../mk/pthread.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
