couchdb: Upgrade to 2.3.1.  Now works with current Erlang.
Summary of changes between 2.1.x and 2.3.x are listed below.  For a more
readable version please see the following URLs:

  http://docs.couchdb.org/en/latest/whatsnew/2.3.html
  http://docs.couchdb.org/en/latest/whatsnew/2.2.html
  http://docs.couchdb.org/en/latest/whatsnew/2.1.html

2.3.x Branch Upgrade Notes

#1602: To improve security, there have been major changes in the configuration
of query servers, SSL support, and HTTP global handlers:

Query servers are NO LONGER DEFINED in the .ini files, and can no longer be
altered at run-time.

The JavaScript and CoffeeScript query servers continue to be enabled by
default. Setup differences have been moved from default.ini to the couchdb and
couchdb.cmd start scripts respectively.

Additional query servers can now be configured using environment variables:

export COUCHDB_QUERY_SERVER_PYTHON="/path/to/python/query/server.py with args"
couchdb

where the last segment in the environment variable (_PYTHON) matches the usual
lowercase(!) query language in the design doc language field (here, python.)

Multiple query servers can be configured by using more environment variables.

You can also override the default servers if you need to set command- line
options (such as couchjs stack size):

export COUCHDB_QUERY_SERVER_JAVASCRIPT="/path/to/couchjs /path/to/main.js -S <STACKSIZE>"
couchdb

The mango query server continues to be enabled by default. The Erlang query
server continues to be disabled by default. This change adds a
[native_query_servers] enable_erlang_query_server = BOOL setting (defaults to
false) to enable the Erlang query server.

If the legacy configuration for enabling the query server is detected, that is
counted as a true setting as well, so existing configurations continue to work
just fine.

SSL Support
Enabling SSL support in the ini file is now easier:

[ssl]
enable = true

If the legacy httpsd configuration is found in your ini file, this will

--- a/databases/couchdb/patches/patch-rel_files_couchdb.in
+++ b/databases/couchdb/patches/patch-rel_files_couchdb.in
@@ -1,9 +1,9 @@
-$NetBSD: patch-rel_overlay_bin_couchdb,v 1.2 2017/11/07 15:33:27 fhajny Exp $
+$NetBSD: patch-rel_files_couchdb.in,v 1.1 2019/09/06 09:10:48 jperkin Exp $
 
-Set pkgsrc standard paths.
+Support pkgsrc layout.
 
---- rel/overlay/bin/couchdb.orig	2017-07-30 22:11:20.000000000 +0000
-+++ rel/overlay/bin/couchdb
+--- rel/files/couchdb.in.orig	2019-03-05 22:42:20.000000000 +0000
++++ rel/files/couchdb.in
 @@ -12,11 +12,7 @@
  # License for the specific language governing permissions and limitations under
  # the License.
@@ -13,14 +13,14 @@ Set pkgsrc standard paths.
 -cd "$COUCHDB_BIN_DIR/../"
 -
 -export ROOTDIR=${ERTS_BIN_DIR%/*}
-+export ROOTDIR=@PREFIX@/couchdb
++export ROOTDIR="@PREFIX@/couchdb"
  
  START_ERL=`cat "$ROOTDIR/releases/start_erl.data"`
  ERTS_VSN=${START_ERL% *}
-@@ -27,5 +23,5 @@ export EMU=beam
- export PROGNAME=`echo $0 | sed 's/.*\///'`
+@@ -33,5 +29,5 @@ ARGS_FILE="${COUCHDB_ARGS_FILE:-$ROOTDIR
+ SYSCONFIG_FILE="${COUCHDB_SYSCONFIG_FILE:-$ROOTDIR/releases/$APP_VSN/sys.config}"
  
  exec "$BINDIR/erlexec" -boot "$ROOTDIR/releases/$APP_VSN/couchdb" \
--     -args_file "$ROOTDIR/etc/vm.args" \
+-     -args_file "${ARGS_FILE}" \
 +     -args_file "@PKG_SYSCONFDIR@/vm.args" \
-      -config "$ROOTDIR/releases/$APP_VSN/sys.config" "$@"
+      -config "${SYSCONFIG_FILE}" "$@"
